Created dataset for NLP and started missing data

--- a/.gitignore
+++ b/.gitignore
@@ -1,66 +1,5 @@
-files/Cleaner_Airbnb_Listingspt2.csv
-files/AirbnbWithMorePlus.csv
-files/Airbnb_Listing_with_242Plus.csv
-files/Airbnb_Listings_with_Amenities.csv
-files/Airbnb_Listings_with_Amenitiespt2.csv
-files/BNB_rows.csv
-files/BNBmodel_finalized_model.sav
-files/Cleaner_Airbnb_Listings.csv
-files/LDA_rows.csv
-files/LDAmodel_finalized_model.sav
-files/MNlistings.csv
-files/NB_rows.csv
-files/NBmodel_finalized_model.sav
-files/NYListing.csv
-files/Pluslinks.csv
-files/Pluslinks.xlsx
-files/QDA_rows.csv
-files/QDAmodel_finalized_model.sav
-files/SFlinks.csv
-files/SanFranAmenitiespt2.csv
-files/SanFranCleaner.csv
-files/SanFranListing_With_Plus.csv
-files/SanFranlistings.csv
-files/Sprint Project - EDA.pptx
-files/Sprint Project - Modeling.pptx
-files/Sprint Project Plan.pptx
-files/Sprint_Accelerator_Experience Syllabus_Spring 2019.pdf
-files/latry1.json
-files/latry10.json
-files/latry11.json
-files/latry2.json
-files/latry3.json
-files/latry4.json
-files/latry5.json
-files/latry6.json
-files/latry7.json
-files/latry8.json
-files/latry9.json
-files/log_rows.csv
-files/logmodel_finalized_model.sav
-files/pluslistings.csv
-files/sanfran.json
-files/sanfran2.json
-files/sanfran3.json
-files/sprintAcceleratorProjectPlannerSpring2019.pptx
-files/sprintAcceleratorProjectPlannerSpring2019 copy.pptx
-files/test.json
-files/test2.json
-files/test3.json
-files/test4.json
-files/try2.json
-files/try3.json
+Code/Modelling.py
 perfect_models/*
-files/SanFran-1a.csv
-files/SanFran-1b.csv
-files/SanFran-2.csv
-files/Airbnb-1a-moreplus.csv
-files/Airbnb-1a.csv
-files/Airbnb-1b-moreplus.csv
-files/Airbnb-1b.csv
-files/Airbnb-2-moreplus.csv
-files/Airbnb-2.csv
-Modelling.py
 models/*
 files/*
 Airbnb/air.csv
